--- a/template.html
+++ b/template.html
@@ -152,7 +152,8 @@
                         'Ark': '火山方舟',
                         'siliconflow': '硅基流动',
                         'DeepSeek': '深度求索',
-                        'Bailian': '阿里百炼'
+                        'Bailian': '阿里百炼',
+                        'LKE': '腾讯知识引擎原子能力'
                     }[provider] }})</td>
                     <td>{{ "%.4f" | format(data.ttft[provider][-1]) }}</td>
                     <td>{{ "%.4f" | format(data.tbt[provider][-1]) }}</td>
@@ -179,7 +180,8 @@
             'Ark': 'Ark (火山方舟)',
             'siliconflow': 'siliconflow (硅基流动)',
             'DeepSeek': 'DeepSeek (深度求索)',
-            'Bailian': 'Bailian (阿里百炼)'
+            'Bailian': 'Bailian (阿里百炼)',
+            'LKE': 'LKE (腾讯知识引擎原子能力)'
         };
         
         // Calculate Throughput from TBT
