--- a/template.html
+++ b/template.html
@@ -336,7 +336,7 @@
     <div class="chart-container">
         <canvas id="ttftChart"></canvas>
     </div>
-    <div class="chart-container"></div>
+    <div class="chart-container">
         <canvas id="tbtChart"></canvas>
     </div>
     <div class="chart-container">
