--- a/template.html
+++ b/template.html
@@ -534,7 +534,7 @@
 
     <footer class="footer">
         <div style="margin-bottom: 1rem;">
-            Crafted with ❤️ by <a href="https://twitter.com/tensorchord" target="_blank" style="color: #333; text-decoration: none;">TensorChord</a>
+            Crafted with ❤️ by <a href="https://github.com/tensorchord" target="_blank" style="color: #333; text-decoration: none;">TensorChord</a>
         </div>
         <div class="footer-links">
             <a href="https://github.com/tensorchord/vectorchord" target="_blank" style="display: flex; align-items: center; gap: 4px;">
