--- a/template.html
+++ b/template.html
@@ -301,8 +301,8 @@
             <thead>
                 <tr>
                     <th data-sort="provider">Provider</th>
-                    <th data-sort="input_price" title="每百万输入 token 的价格">Input<br>($/1M)</th>
-                    <th data-sort="output_price" title="每百万输出 token 的价格">Output<br>($/1M)</th>
+                    <th data-sort="input_price" title="每百万输入 token 的价格">Input<br>(1M token)</th>
+                    <th data-sort="output_price" title="每百万输出 token 的价格">Output<br>(1M token)</th>
                     <th data-sort="ttft" title="从提交查询到接收到第一个 token 的时间">TTFT (s)</th>
                     <th data-sort="tbt" title="生成相邻 token 之间的平均时间">TBT (ms)</th>
                     <th data-sort="throughput" title="每秒生成的 token 数 (1000/TBT)">Throughput<br>(tokens/s)</th>
@@ -318,12 +318,12 @@
                         'Bailian': '阿里百炼',
                         'LKE': '腾讯知识引擎原子能力'
                     }[provider] }})</td>
-                    <td>{{ "%.1f" | format(pricing.input_prices[provider]) }}
+                    <td>{{ "¥%.2f" | format(pricing.input_prices[provider]) }}
                         {% if provider in pricing.input_cache_prices %}
-                        <br><span style="font-size: 0.8em; color: #666;">({{ "%.1f" | format(pricing.input_cache_prices[provider]) }} cached)</span>
+                        <br><span style="font-size: 0.8em; color: #666;">(¥{{ "%.2f" | format(pricing.input_cache_prices[provider]) }} cached)</span>
                         {% endif %}
                     </td>
-                    <td>{{ "%.1f" | format(pricing.output_prices[provider]) }}</td>
+                    <td>{{ "¥%.2f" | format(pricing.output_prices[provider]) }}</td>
                     <td>{{ "%.2f" | format(data.ttft[provider][-1]) }}</td>
                     <td>{{ "%.2f" | format(data.tbt[provider][-1] * 1000) }}</td>
                     <td>{{ "%.2f" | format(1.0 / data.tbt[provider][-1] if data.tbt[provider][-1] > 0 else 0) }}</td>
