--- a/template.html
+++ b/template.html
@@ -306,16 +306,16 @@
     </div>
 
     <div class="table-container">
-        <h2>Latest Results ({{ data.dates[-1] }})</h2>
+        <h2>最新数据 ({{ data.dates[-1] }})</h2>
         <table id="resultsTable">
             <thead>
                 <tr>
-                    <th data-sort="provider">Provider</th>
-                    <th data-sort="input_price" title="每百万输入 token 的价格">Input<br>(1M token)</th>
-                    <th data-sort="output_price" title="每百万输出 token 的价格">Output<br>(1M token)</th>
+                    <th data-sort="provider">供应商</th>
+                    <th data-sort="input_price" title="每百万输入 token 的价格">输入<br>(1M tokens)</th>
+                    <th data-sort="output_price" title="每百万输出 token 的价格">输出<br>(1M tokens)</th>
                     <th data-sort="ttft" title="从提交查询到接收到第一个 token 的时间">TTFT (s)</th>
                     <th data-sort="tbt" title="生成相邻 token 之间的平均时间">TBT (ms)</th>
-                    <th data-sort="throughput" title="每秒生成的 token 数 (1000/TBT)">Throughput<br>(tokens/s)</th>
+                    <th data-sort="throughput" title="每秒生成的 token 数 (1000/TBT)">吞吐<br>(tokens/s)</th>
                 </tr>
             </thead>
             <tbody>
@@ -338,13 +338,13 @@
                 
                 {% for provider in data.providers %}
                 <tr>
-                    <td>{{ provider }} ({{ {
+                    <td>{{ {
                         'Ark': '火山方舟',
                         'siliconflow': '硅基流动',
                         'DeepSeek': '深度求索',
                         'Bailian': '阿里百炼',
                         'LKE': '腾讯知识引擎原子能力'
-                    }[provider] }})</td>
+                    }[provider] }}</td>
                     <td>¥{{ "%.2f" | format(pricing.input_prices[provider]) }}
                         {% if provider in pricing.input_cache_prices %}
                         <span class="cached-price">(¥{{ "%.2f" | format(pricing.input_cache_prices[provider]) }} cached)</span>
